--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   equatable: ^2.0.5
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  simple_circular_progress_bar: ^1.0.2
+  timer_builder: ^2.0.0
+  percent_indicator: ^4.2.3
 
 
   # The following adds the Cupertino Icons font to your application.
